force-app/main/default/objects/env__c/env__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Environment Variables</label>
</CustomObject>