force-app/main/default/objects/env__c/fields/am_update_api__c.field-meta.xml
<CustomField>
    <fullName>am_update_api__c</fullName>
    <label>am_update_api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>