force-app/main/default/objects/env__c/fields/current_env__c.field-meta.xml
<CustomField>
    <fullName>current_env__c</fullName>
    <label>current_env</label>
    <length>255</length>
    <type>Text</type>
</CustomField>