force-app/main/default/objects/env__c/fields/feasibility_alert_channel__c.field-meta.xml
<CustomField>
    <fullName>feasibility_alert_channel__c</fullName>
    <label>feasibility_alert_channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>