force-app/main/default/objects/env__c/fields/feasibility_team__c.field-meta.xml
<CustomField>
    <fullName>feasibility_team__c</fullName>
    <label>feasibility_team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>