force-app/main/default/objects/env__c/fields/pd_project_id__c.field-meta.xml
<CustomField>
    <fullName>pd_project_id__c</fullName>
    <label>pd_project_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>