force-app/main/default/objects/env__c/fields/pmp_deal_followers__c.field-meta.xml
<CustomField>
    <fullName>pmp_deal_followers__c</fullName>
    <label>pmp_deal_followers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>