force-app/main/default/objects/env__c/fields/sf_core_channel__c.field-meta.xml
<CustomField>
    <fullName>sf_core_channel__c</fullName>
    <label>sf_core_channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>