force-app/main/default/objects/env__c/fields/sf_core_team__c.field-meta.xml
<CustomField>
    <fullName>sf_core_team__c</fullName>
    <label>sf_core_team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>